# HowToWriteCmakelistsFile

./: README.md
1 introduction/: CMakeLists.txt  tutorial1.md
2 multiple project/: CMakeLists.txt  tutorial2.md
3 multiple files in one project/: tutorial3.md
4 add compile flag/: CMakeLists.txt  tutorial4.md
4 add compile flag/include/: a.h
4 add compile flag/src/: a.cpp
4 cmakefile nested/: CMakeLists.txt  main.cpp  tutorial4.md
4 cmakefile nested/hello/: hello.cpp  hello.h
4 cmakefile nested/world/: world.cpp  world.h
5 multiple cmakefiles/: CMakeLists.txt  tutorial5.md
5 multiple cmakefiles/src/2.01.nullptr/: CMakeLists.txt
6 post build/: CMakeLists.txt  tutorial6.md
6 post build/src/2.01.nullptr/: CMakeLists.txt
6 post build/src/2.02.constexpr/: CMakeLists.txt
7 tool chain/: CMakeLists.txt  Hello.c  linux.toolchain.cmake
